--- a/templates/appOne/mineLogin.html
+++ b/templates/appOne/mineLogin.html
@@ -1,4 +1,4 @@
-{% extends 'appOne/base.html' %}
+ {% extends 'appOne/base.html' %}
 {% load static %}
 
 {% block selfResource %}
@@ -27,7 +27,7 @@
             <input type="submit" value="登录" class="input_submit btn btn-info">
 
         </form>
-        <a href="{% url 'axf:loadregedit' %}" class="a_class">没有账号？去注册</a>
+        <a href="{% url 'axf:loadregedit' %}" class="a_class">没有账号？去注册吧</a>
         <a href="{% url 'axf:mine' %}"><div id="div_back">&lt;</div></a>
     </div>
 
