--- a/templates/appOne/base.html
+++ b/templates/appOne/base.html
@@ -74,7 +74,7 @@
 
             <dl>
                 <dt><span></span></dt>
-                <dd>我的</dd>
+                <dd>mine</dd>
             </dl>
 
         </a>
